add footer and backlog

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,8 @@
 // ✅ Componentes visuales
 @use 'components/navbar';
 @use 'components/hero';
+@use 'components/footer';
+
 
 // 🌍 Ajustes globales Enraiza
 html {
