--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
 import InitClient from '../components/InitClient.jsx';
 import '../styles/main.scss'; // Import directo, no necesita style tag
 ---
@@ -20,6 +21,9 @@ import '../styles/main.scss'; // Import directo, no necesita style tag
     <main class="container-fluid px-0">
       <slot />
     </main>
+
+    <Footer />
+
   </body>
 
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js" defer></script>
